--- a/it_modernization/people.yaml
+++ b/it_modernization/people.yaml
@@ -1339,9 +1339,9 @@ people:
       event: Jordan Wick is detailed from DOGE to the Department of Education
     - date: 2025-02-28
       agency: NLRB
-      type: report
-      event: After a journalist posts a link to Jordan Wick's public Github repo, a staffer at the NLRB notices code that
-        is named as a backdoor to the NxGen system
+      type: disruption
+      event: After a journalist posts info that Jordan Wick's github profile is public, a staffer an NLRB notices a project
+        named NxGenBdoorExtract which seemed to indicate a tool for exfiltrating data from NxGen via a back door
     - date: 2025-03-05
       agency: CFPB
       type: access_revoked
@@ -3029,6 +3029,29 @@ people:
       event: Two DOGE staffers attempted to force water pumps to be turned on in a large reservoir in California for a photo
         op
 
+  Mark Steffensen:
+    agencies:
+    - Social Security Administration
+    events:
+    - date: 2025-02-10
+      agency: SSA
+      type: report
+      event: Incoming SSA head directs for Mark Steffensen to beonboarded to SSA as an attorney, according to the testimony
+        of a whistleblower
+    - date: 2025-02-25
+      agency: SSA
+      type: onboarded
+      event: Mark Steffensen is onboarded as a Senior Advisor in Office of the Commissioner at the Social Security Administration
+    - date: 2025-02-27
+      agency: SSA
+      type: promotion
+      event: Mark Steffensen is named the Acting General Counsel of SSA, consolidating more power in his role
+    - date: 2025-02-28
+      agency: SSA
+      type: promotion
+      event: Leland Dudek merges several SSA offices into a new Office of Legal and Policy and names Mark Steffensen the Deputy
+        Commissioner
+
   Peter Marocco:
     agencies:
     - Inter-American Foundation
@@ -3131,15 +3154,6 @@ people:
       agency: IMLS
       type: onboarded
       event: Keith Sonderling is sworn in as acting director of the IMLS
-
-  Mark Steffensen:
-    agencies:
-    - Social Security Administration
-    events:
-    - date: 2025-03-24
-      agency: SSA
-      type: onboarded
-      event: Mark Steffensen is named a Senior Advisor at the recommendation of the nominee for SSA director
 
   Katrine Trampe:
     agencies:
