--- a/it_modernization/raw_data/events.yaml
+++ b/it_modernization/raw_data/events.yaml
@@ -417,6 +417,12 @@
   source: https://www.washingtonpost.com/opinions/2025/02/24/musk-doge-usaid-cuts-dc/
   agency: USAID
 
+- date: 2025-01-27
+  type: disruption
+  event: President Trump illegally fires NLRB Chair Gwynne Wilcox and NLRB General Counsel Jennifer Abruzzo. This leaves the agency without quorum to act.
+  source: https://thefulcrum.us/business-democracy/department-of-labor-doge
+  agency: NLRB
+
 - date: 2025-01-28
   event: CDC managers receive a directive from OPM to rank probationary hires as "mission critical", working on "strategic priorities" or neither. When one of the CDC's ten centres responded that all their staff were "mission critical", higher-ups told them that wasn't good enough, and set percentages to meet for each category.
   type: report
@@ -1303,6 +1309,14 @@
   source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
   agency: SSA
 
+- date: 2025-02-10
+  type: report
+  event: Incoming SSA head directs for Mark Steffensen to beonboarded to SSA as an attorney, according to the testimony of a whistleblower
+  named:
+  - Mark Steffensen
+  source: https://www.finance.senate.gov/imo/media/doc/ssa_whistleblower_statement.pdf
+  agency: SSA
+
 - date: 2025-02-11
   type: promotion
   event: Greg Hogan is formally named the CIO of OPM
@@ -2017,6 +2031,12 @@
   - DOGE
   - SSA
 
+- date: 2025-02-20
+  type: disruption
+  event: Employees at the NLRB are alarmed to see that DOGE has claiming it has cancelled the lease for their office in Buffalo, NY
+  source: https://www.huffpost.com/entry/nlrb-office-lease-doge-wall-of-receipts_n_67b76046e4b05145b9c4ca05
+  agency: NLRB
+
 - date: 2025-02-21
   type: official
   event: USDA Secretary Rollins posts a photo of a grant-cancellation session on the @DOGE_USDA account
@@ -2242,6 +2262,12 @@
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278529/gov.uscourts.dcd.278529.1.2_1.pdf
   agency: USIP
 
+- date: 2025-02-24~
+  type: report
+  event: Staffers at the NLRB are told that DOGE will be arriving at the agency the following week and that they have questions about the agency's network architecture
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency: NLRB
+
 - date: 2025-02-25
   type: disruption
   event: 21 remaining USDS staff publicly resign in protest of DOGE's actions
@@ -2302,6 +2328,15 @@
   event: The Chief Human Capital Office of the Department of Agriculture testifies to Congress that OPM ordered the firing of all probationary federal employees
   source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
   agency: USDA
+
+- date: 2025-02-25
+  type: onboarded
+  onboard_type: appointed
+  event: Mark Steffensen is onboarded as a Senior Advisor in Office of the Commissioner at the Social Security Administration
+  named:
+  - Mark Steffensen
+  source: https://bsky.app/profile/chrisgeidner.bsky.social/post/3lipqblfluc2h
+  agency: SSA
 
 - date: 2025-02-26
   type: official
@@ -2407,6 +2442,14 @@
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
   agency: SSA
 
+- date: 2025-02-27
+  type: promotion
+  event: Mark Steffensen is named the Acting General Counsel of SSA, consolidating more power in his role
+  named:
+  - Mark Steffensen
+  source: https://web-cdn.bsky.app/profile/chrisgeidner.bsky.social/post/3ljb6rufur22e
+  agency: SSA
+
 - date: 2025-02-28
   type: disruption
   event: After a federal judge overrules the mass firing of probationary workers, 180 workers (out of 750) return to work
@@ -2486,11 +2529,19 @@
   agency: SSA
 
 - date: 2025-02-28
-  type: report
-  event: After a journalist posts a link to Jordan Wick's public Github repo, a staffer at the NLRB notices code that is named as a backdoor to the NxGen system
+  type: promotion
+  event: Leland Dudek merges several SSA offices into a new Office of Legal and Policy and names Mark Steffensen the Deputy Commissioner
+  named:
+  - Mark Steffensen
+  source: https://web-cdn.bsky.app/profile/chrisgeidner.bsky.social/post/3ljb6rufur22e
+  agency: SSA
+
+- date: 2025-02-28
+  type: disruption
+  event: After a journalist posts info that Jordan Wick's github profile is public, a staffer an NLRB notices a project named NxGenBdoorExtract which seemed to indicate a tool for exfiltrating data from NxGen via a back door
   named:
   - Jordan Wick
-  source: https://www.npr.org/2025/04/15/nx-s1-5355896/doge-nlrb-elon-musk-spacex-security
+  source: https://www.wrvo.org/2025-04-15/a-whistleblowers-disclosure-details-how-doge-may-have-taken-sensitive-labor-data
   agency: NLRB
 
 - date: 2025-03-01
@@ -2560,6 +2611,18 @@
   case_no: 1:25-cv-00660
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.7.2.pdf
   agency: USADF
+
+- date: 2025-03-03
+  type: report
+  event: A black SUV and police escort bring DOGE staff to the agency. They weren't introduced and didn't interact with IT
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency: NLRB
+
+- date: 2025-03-03
+  type: report
+  event: The NLRB Assistant CIO conveys instructions that there are to be no logs or records made of account creation for DOGE staff and they are to be given "tenant"-level accounts with read/write/admin for all systems. These exceed existing permissions that would normally be used by auditors.
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency: NLRB
 
 - date: 2025-03-04
   type: access_revoked
@@ -2669,6 +2732,12 @@
   case_no: 1:25-cv-00660
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.7.2.pdf
   agency: USADF
+
+- date: 2025-03-04
+  type: disruption
+  event: NLRB network staff notice the existence of an anomalous container on their network and expired storage tokens to deter analysis of what resources were accessed
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency: NLRB
 
 - date: 2025-03-05
   type: onboarded
@@ -2854,6 +2923,18 @@
   source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
   agency: SSA
 
+- date: 2025-03-05
+  type: disruption
+  event: NLRB network staff discover that a network watcher within their cloud environment was in the off state and not logging the creation of new network nodes
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency: NLRB
+
+- date: 2025-03-05
+  type: disruption
+  event: NLRB network staff see a large spike in outgoing network traffic from their network with no corresponding incoming traffic (as might be the case for web traffic). He also sees a surge in DNS requests which might be used to hide tunnels for stealing data.
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency: NLRB
+
 - date: 2025-03-06
   type: disruption
   event: The Engineering Director of USDS publicly resigns in protest, stating "this is not the mission I joined"
@@ -2877,6 +2958,18 @@
   - Nate Cavanaugh
   source: https://www.thedailybeast.com/elon-musks-doge-goons-in-tense-standoff-video-unmasked/
   agency: USADF
+
+- date: 2025-03-06
+  type: disruption
+  event: NLRB network staff discover a recently created and deleted account with a DOGE-specific name DogeSA_2d5c3e0446f9@nlrb.microsoft.com that has seemingly been configured to support automated scripts accessing NLRB's cloud
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency: NLRB
+
+- date: 2025-03-06
+  type: disruption
+  event: After various users reported login problems to the service desk, networking staff at NLRB discover that certain conditional access policies had been updated. This was confirmed to not be any scheduled work.
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency: NLRB
 
 - date: 2025-03-07
   type: offboarded
@@ -2910,6 +3003,18 @@
   named:
   - Alexander Simonpour
   source: https://about.usps.com/who/legal/foia/documents/mou-alex-simonpour-executed-redacted.pdf
+
+- date: 2025-03-07
+  type: disruption
+  event: Networking staff at NLRB discovered that 3 Github libraries were downloaded in the prior 30 days that could be used for scraping high volumes of data and obscuring the source requests
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency: NLRB
+
+- date: 2025-03-07
+  type: disruption
+  event: Networking staff at NLRB determines that 10GB of data was exfiltrated from the NxGen case management system and then from NLRB. It's possible this is the compressed size and represents many more records
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency: NLRB
 
 - date: 2025-03-08
   type: disruption
@@ -2977,6 +3082,12 @@
   - Antoine McCord
   source: https://www.nextgov.com/people/2025/03/dhs-taps-antoine-mccord-top-tech-post/403727/
   agency: DHS
+
+- date: 2025-03-11
+  type: disruption
+  event: There is further increase system utilization of the NxGen system and multiple attempts to connect to the system from an IP address in Russia using an account seemingly created only 15 minutes prior by DOGE engineers
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency: NLRB
 
 - date: 2025-03-12
   type: report
@@ -3098,6 +3209,12 @@
   source: https://apnews.com/article/us-postal-service-doge-agreement-daf3bf54fa0718908791fcb368b4d9d8
   agency: USPS
 
+- date: 2025-03-13
+  type: disruption
+  event: NLRB networking staff detect another transfer of data to an external endpoint
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency: NLRB
+
 - date: 2025-03-14
   type: onboarded
   onboard_type: appointed
@@ -3216,14 +3333,6 @@
   named_aliases:
   - SSA-11
   source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
-  agency: SSA
-
-- date: 2025-03-16
-  type: access_granted
-  event: Unidentified "Employee 11" is accidentally granted access to SSA systems that DOGE was banned from by the court order
-  named_aliases:
-  - SSA-11
-  source: https://www.washingtonpost.com/politics/2025/04/15/doge-social-security-data-judge/
   agency: SSA
 
 - date: 2025-03-17
@@ -3477,6 +3586,12 @@
   source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
   agency: SSA
 
+- date: 2025-03-19
+  type: disruption
+  event: NLRB networking observes a spike in billing records related to nonexistent systems, likely indicating resources that were short-lived or deleted to cover up tracks
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency: NLRB
+
 - date: 2025-03-20
   type: legal
   case_no: 1:25-cv-00511
@@ -3661,15 +3776,6 @@
   agency: SSA
 
 - date: 2025-03-24
-  type: onboarded
-  onboard_type: appointed
-  event: Mark Steffensen is named a Senior Advisor at the recommendation of the nominee for SSA director
-  named:
-  - Mark Steffensen
-  source: https://www.washingtonpost.com/politics/2025/04/15/doge-social-security-data-judge/
-  agency: SSA
-
-- date: 2025-03-24
   type: disruption
   event: Mike Russo is reportedly removed from his CIO position by the Trump administration for complying quickly with the judicial ruling to remove DOGE access
   named:
@@ -3682,6 +3788,14 @@
   event: Postmaster General DeJoy resigns
   source: https://www.usatoday.com/story/news/nation/2025/03/30/postal-service-changes-doge-musk/82696231007/
   agency: USPS
+
+- date: 2025-03-24~
+  type: disruption
+  event: NLRB networking staff make a formal report of the suspicious activity to US-CERT at CISA
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency:
+  - NLRB
+  - CISA
 
 - date: 2025-03-25
   type: promotion
@@ -4198,6 +4312,14 @@
   source: https://www.washingtonpost.com/politics/2025/04/04/social-security-layoffs-trump-musk/
   agency: SSA
 
+- date: 2025-04-04
+  type: disruption
+  event: CISA informs NLRB networking staff that they should drop any investigation and not move forward on any reporting
+  source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
+  agency:
+  - NLRB
+  - CISA
+
 - date: 2025-04-05
   type: report
   event: DOGE is reportedly planning to state a "hack-a-thon" in cooperation with Palantir to create a "mega API" to access IRS data
@@ -4206,6 +4328,14 @@
   - Sam Corcos
   source: https://www.wired.com/story/doge-hackathon-irs-data-palantir/
   agency: IRS
+
+- date: 2025-04-07
+  type: access_granted
+  event: Unidentified "Employee 11" is accidentally granted access to SSA systems that DOGE was banned from by the court order
+  named_aliases:
+  - SSA-11
+  source: https://www.washingtonpost.com/politics/2025/04/15/doge-social-security-data-judge/
+  agency: SSA
 
 - date: 2025-04-07
   type: disruption
@@ -4250,6 +4380,14 @@
   - IRS
   - DHS
   - ICE
+
+- date: 2025-04-08~
+  type: access_granted
+  event: Unidentified "Employee 11" is accidentally granted access to SSA systems that DOGE was banned from by the court order
+  named_aliases:
+  - SSA-11
+  source: https://www.washingtonpost.com/politics/2025/04/15/doge-social-security-data-judge/
+  agency: SSA
 
 - date: 2025-04-08
   type: report
