--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -762,6 +762,11 @@ DOD:
     - DOI
     - DOD
     - NIH
+  - date: 2025-04-15
+    type: disruption
+    event: All 14 current members of the Pentagon's pre-existing Defense Digital Service team announce a mass resignation after being sidelined and frustrated with DOGE efforts at the agency
+    source: https://www.politico.com/news/2025/04/15/pentagons-digital-resignations-00290930
+    agency: DOD
   systems: {}
   cases: {}
 
@@ -2995,6 +3000,11 @@ GSA:
     event: DOGE rolls out a custom GSAi custom chatbot to 1500 workers
     source: https://www.wired.com/story/gsai-chatbot-1500-federal-workers/
     agency: GSA
+  - date: 2025-03-13
+    type: report
+    event: 46 former GSA executives write an open letter decrying the damage that DOGE has done to the agency
+    source: https://federalnewsnetwork.com/commentary/2025/03/letter-to-the-editor-46-former-gsa-executives-say-cuts-to-cause-irreversible-damage/?readmore=1
+    agency: GSA
   - date: 2025-03-19
     type: report
     event: GSA hosts a deep-background media briefing to demo its GSAi tool with invitations sent to reporters from Bloomberg, The Atlantic, and Fox among others.
@@ -3388,6 +3398,13 @@ HUD:
     type: report
     event: HUD staff receive an email from HUD HR offering a new "Fork in the Road" offer for deferred resignation, open until April 11
     source: https://bsky.app/profile/davelevitan.bsky.social/post/3llqvwtc5lq2v
+    agency: HUD
+  - date: 2025-04-15
+    type: report
+    event: Mike Mirski is reportedly leading a DOGE effort at HUD to identify and target households that include undocumented immigrants.
+    source: https://www.msn.com/en-us/politics/government/doge-is-collecting-federal-data-to-remove-immigrants-from-housing-jobs/ar-AA1CWQ57
+    named:
+    - Michael Mirski
     agency: HUD
   systems:
     FASS-PH:
@@ -5361,6 +5378,13 @@ State:
     named:
     - Peter Marocco
     source: https://www.wsj.com/politics/policy/trump-official-who-oversaw-closure-of-usaid-has-left-state-department-5760da3d?st=59hf4K
+    agency: State
+  - date: 2025-04-15
+    type: promotion
+    event: Jeremy Lewin is named the new acting head of foreign assistance at the State Department after the departure of Peter Marocco
+    source: https://apnews.com/article/trump-foreign-aid-musk-doge-lewin-373442292067b2070243daf8041e1668
+    named:
+    - Jeremy Lewin
     agency: State
   systems: {}
   cases: {}
