--- a/it_modernization/raw_data/events.yaml
+++ b/it_modernization/raw_data/events.yaml
@@ -904,8 +904,6 @@
 - date: 2025-02-05
   type: report
   event: Elon Musk promises that DOGE will make rapid upgrades to airline systems after outage of NOTAM alerting system
-  named:
-  - Elon Musk
   source: https://www.nytimes.com/2025/02/05/us/politics/elon-musk-doge-faa.html
   agency: FAA
 
@@ -1069,8 +1067,6 @@
 - date: 2025-02-07
   type: disruption
   event: Elon Musk posts a tweet "CFPB RIP" with a tombstone emoji
-  named:
-  - Elon Musk
   source: https://news.bloomberglaw.com/banking-law/musks-doge-descends-on-consumer-financial-protection-bureau
   agency: CFPB
 
@@ -1651,8 +1647,6 @@
 - date: 2025-02-17
   type: legal
   event: In a filing in "State of New Mexico v. Elon Musk," DOJ lawyers declare that Elon Musk is not the USDS Administrator, but just an advisor
-  named:
-  - Elon Musk
   case_no: 1:25-cv-00429
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277463/gov.uscourts.dcd.277463.24.0_1.pdf
   agency: DOGE
@@ -2230,8 +2224,6 @@
 - date: 2025-02-24
   type: report
   event: After Elon Musk threatens on X that employees must complete a list of 5 accomplishments and send it to OPM or risk termination, OPM sends out an email requesting that list (without the threat) to every government employee. Widespread confusion occurs at many agenices.
-  named:
-  - Elon Musk
   source: https://fedscoop.com/agencies-take-cautious-approaches-to-opm-email-asking-for-list-of-accomplishments/
   agency: OPM
 
@@ -3038,8 +3030,6 @@
 - date: 2025-03-10
   type: report
   event: Elon Musk claims there are about 100 DOGE staffers and he has plans to double to 200. He also claims they are in every federal Department.
-  named:
-  - Elon Musk
   source: https://www.nbcnews.com/politics/doge/musk-says-doge-almost-every-federal-agency-plans-double-staff-rcna195735
   agency: DOGE
 
@@ -3100,8 +3090,6 @@
   event: US District Judge Tanya Chutkan issues an order giving DOGE and Elon Musk three weeks to comply with document discovery requests about its staffing and downsizing plans for agencies
   source: https://www.politico.com/news/2025/03/12/elon-musk-judge-orders-discovery-00227924
   case_no: 1:25-cv-00429
-  named:
-  - Elon Musk
   agency: DOGE
 
 - date: 2025-03-12
@@ -3452,8 +3440,6 @@
 - date: 2025-03-18
   type: legal
   event: In a ruling in J. Doe 1-26 v. Musk (D. Md), Judge Theodore D. Chuang declares that evidence shows that Elon Musk was effectively running DOGE without being appointed to the role
-  named:
-  - Elon Musk
   source: https://assets.bwbx.io/documents/users/iqjWHBFdfxIU/rZttxcbH9cfc/v0
   case_no: 8:25-cv-00462
   agency: DOGE
@@ -3999,8 +3985,6 @@
 - date: 2025-03-28
   type: report
   event: During an interview, the head of HHS reports that DOGE created the new organizational chart for the agency ahead of mass firings, says "we're not cutting scientists"
-  named:
-  - Elon Musk
   source: https://www.newsnationnow.com/cuomo-show/rfk-defends-hhs-job-cuts/
   agency: HHS
 
@@ -4150,7 +4134,6 @@
   type: report
   event: At a town hall event in Wisconsin, Elon Musk and Antonio Gracias claim to have found fraud in the number of immigrants being granted social security numbers
   named:
-  - Elon Musk
   - Antonio Gracias
   source: https://www.washingtonpost.com/politics/2025/04/01/elon-musk-social-security-immigrants/
   agency: SSA
@@ -4477,6 +4460,15 @@
   - Peter Marocco
   source: https://www.wsj.com/politics/policy/trump-official-who-oversaw-closure-of-usaid-has-left-state-department-5760da3d?st=59hf4K
   agency: State
+
+- date: 2025-04-11
+  type: legal
+  event: The plaintiffs in AFGE, AFL-CIO, et. al vs. OPM file a motion asking for the testimony of Noah Peters to be thrown out because they argue it is misleading and possibly a fabrication in parts
+  case_no: 3:25-cv-01780
+  source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.197.0.pdf
+  named:
+  - Noah Peters
+  agency: OPM
 
 - date: 2025-04-12
   type: disruption
