--- a/it_modernization/raw_data/details.yaml
+++ b/it_modernization/raw_data/details.yaml
@@ -11,7 +11,7 @@
   to: SSA
   signed_date: 2025-03-17
   start_date: 2025-03-05
-  end_date: 2025-03-06
+  nte_date: 2025-03-06
   max_people: 1
   named_aliases:
   - SSA-7
@@ -25,7 +25,7 @@
   to: SSA
   signed_date: 2025-03-06
   start_date: 2025-02-18
-  end_date: 2026-02-18
+  nte_date: 2026-02-18
   max_people: 1
   reimbursed: true
   named_aliases:
@@ -39,7 +39,7 @@
   to: SSA
   signed_date: 2025-02-26
   start_date: 2025-02-26
-  end_date: 2025-02-26
+  nte_date: 2025-02-26
   max_people: 1
   reimbursed: false
   named_aliases:
@@ -66,7 +66,7 @@
   to: SSA
   signed_date: 2025-02-18
   start_date: 2025-02-18
-  end_date: 2026-02-18
+  nte_date: 2026-02-18
   max_people: 1
   reimbursed: true
   named_aliases:
@@ -80,7 +80,7 @@
   to: SSA
   signed_date: 2025-02-20
   start_date: 2025-02-19
-  end_date: 2026-07-04
+  nte_date: 2026-07-04
   max_people: 15
   reimbursement_amount: "$4,358,750"
   reimbursed: true
@@ -93,7 +93,7 @@
   to: Education
   signed_date: 2025-02-12
   start_date: 2025-01-20
-  end_date: 2026-07-04
+  nte_date: 2026-07-04
   max_people: 5
   reimbursed: false
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
@@ -104,7 +104,7 @@
   to: Education
   signed_date: 2025-02-12
   start_date: 2025-02-03
-  end_date: 2026-02-12
+  nte_date: 2026-02-12
   max_people: 1
   reimbursed: false
   named_aliases:
@@ -161,7 +161,7 @@
   source: https://about.usps.com/who/legal/foia/documents/mou-alex-simonpour-executed-redacted.pdf
   reimbursed: false
   start_date: 2025-03-07
-  end_date: 2025-06-15
+  nte_date: 2025-06-15
   signed_date: 2025-03-12
   file: mou-20250312-gsa-usps-alex-simonpour.pdf
 
@@ -179,7 +179,7 @@
   - Ethan Shaotran
   reimbursed: false
   start_date: 2025-02-20
-  end_date: 2026-07-04
+  nte_date: 2026-07-04
   signed_date: 2025-02-21
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.20.7.pdf
   file: mou-20250220-gsa-usadf-ethan-shaotran.pdf
