--- a/it_modernization/people.yaml
+++ b/it_modernization/people.yaml
@@ -749,6 +749,11 @@ people:
       type: report
       event: In response to a discovery request in AFL-CIO vs. DOL, the government provides an incomplete list DOGE staff
         who have worked at HHS
+    - date: 2025-04-16
+      agency: DOGE
+      type: report
+      event: Three DOGE staffers are reported to work with staff from DHS, the State Department and USCIS on implementing
+        an application process for a $5 Million "Gold Card" visa
 
   Ryan Wunderly:
     agencies:
@@ -900,6 +905,11 @@ people:
       type: report
       event: In response to a discovery request in AFL-CIO vs. DOL, the government provides an incomplete list DOGE staff
         who have worked at HHS
+    - date: 2025-04-16
+      agency: DOGE
+      type: report
+      event: Three DOGE staffers are reported to work with staff from DHS, the State Department and USCIS on implementing
+        an application process for a $5 Million "Gold Card" visa
 
   Luke Farritor:
     agencies:
@@ -2344,6 +2354,11 @@ people:
         other things, they asserted nobody has gotten fired, 40% of calls to one Social Security office were fraud, federal
         judges were corrupt, the government should work like the Apple Store, and the target is 15% reduction in government
         spending. Amy Gleason did not appear.
+    - date: 2025-04-16
+      agency: DOGE
+      type: report
+      event: Three DOGE staffers are reported to work with staff from DHS, the State Department and USCIS on implementing
+        an application process for a $5 Million "Gold Card" visa
 
   Sam Corcos:
     agencies:
