--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -1288,6 +1288,15 @@ DOGE:
     - Brad Smith
     source: https://www.nbcnews.com/politics/doge/elon-musks-doge-tries-put-new-faces-reclusive-federal-office-rcna198491
     agency: DOGE
+  - date: 2025-04-16
+    type: report
+    event: Three DOGE staffers are reported to work with staff from DHS, the State Department and USCIS on implementing an application process for a $5 Million "Gold Card" visa
+    source: https://www.nytimes.com/2025/04/16/us/politics/gold-card-visa-trump-musk.html
+    named:
+    - Marko Elez
+    - Edward Coristine
+    - Joe Gebbia
+    agency: DOGE
   systems: {}
   cases:
     1:25-cv-00429:
