Fun with agency mermaids

--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -1481,7 +1481,7 @@ DHS:
     - DHS
     - ICE
   - date: 2025-04-07
-    type: report
+    type: interagency
     event: After some qualms about its legality, Leland Dudek signs two memos authorizing sharing data that would allow DHS and ICE to locate immigrants
     source: https://www.washingtonpost.com/politics/2025/04/12/trump-immigrants-dead-social-security/
     named:
@@ -3465,7 +3465,7 @@ ICE:
     - DHS
     - ICE
   - date: 2025-04-07
-    type: report
+    type: interagency
     event: After some qualms about its legality, Leland Dudek signs two memos authorizing sharing data that would allow DHS and ICE to locate immigrants
     source: https://www.washingtonpost.com/politics/2025/04/12/trump-immigrants-dead-social-security/
     named:
@@ -3684,7 +3684,7 @@ IRS:
     - DHS
     - ICE
   - date: 2025-04-07
-    type: report
+    type: interagency
     event: After some qualms about its legality, Leland Dudek signs two memos authorizing sharing data that would allow DHS and ICE to locate immigrants
     source: https://www.washingtonpost.com/politics/2025/04/12/trump-immigrants-dead-social-security/
     named:
@@ -5925,7 +5925,7 @@ USIP:
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278529/gov.uscourts.dcd.278529.14.1.pdf
     agency: USIP
   - date: 2025-03-25
-    type: report
+    type: interagency
     named:
     - Nate Cavanaugh
     - Stephen Ehikian
