--- a/it_modernization/events.yaml
+++ b/it_modernization/events.yaml
@@ -5105,7 +5105,7 @@ events:
     - DOGE
 
 - date: 2025-03-25
-  type: report
+  type: interagency
   named:
   - Nate Cavanaugh
   - Stephen Ehikian
@@ -5719,7 +5719,7 @@ events:
   source: https://www.wired.com/story/dr-oz-ai-health-care-medicare-cms-town-hall/
 
 - date: 2025-04-07
-  type: report
+  type: interagency
   event: After some qualms about its legality, Leland Dudek signs two memos authorizing sharing data that would allow DHS
     and ICE to locate immigrants
   source: https://www.washingtonpost.com/politics/2025/04/12/trump-immigrants-dead-social-security/
